--- a/main/homepage.css
+++ b/main/homepage.css
@@ -1,3 +1,8 @@
+/* body and nav bar */
+body{
+    margin: 0;
+}
+
 .navbar {
     background-color: #89B6E3;
     display: inline-flex;
@@ -14,4 +19,21 @@
 }
 .navlist{
     padding-left: 30vw;
+}
+
+/* search bar */
+
+.searchbar{
+    background-color: #D9D9D9;
+    width: 100%;
+    height: 100px;   
+    
+}
+
+.searchbox{
+    display: inline-flex;
+    top: 50%;
+    left: 50%;
+    position: relative;
+    transform: translate(-50%, -50%);
 }
