--- a/public/style.css
+++ b/public/style.css
@@ -682,3 +682,23 @@ video {
 .pl-40vm{
   padding-left: 60vm;
 }
+
+.signin{
+    
+  background-color: #E9E9E9;
+  width: 100%;
+  height: 300px;
+  align-items: center;
+  align-content: center;
+}
+.signinbox{
+  border: 2px solid;
+  width:fit-content;
+  top: 50%;
+  left: 50%;
+  position: relative;
+  transform: translate(-50%,-50%);
+}
+.signincontent{
+  padding: 5px;
+}
