--- a/public/style.css
+++ b/public/style.css
@@ -685,6 +685,14 @@ video {
   padding-left: 40vw;
 }
 
+.h-1px{
+  height: 1px;
+}
+
+.bg-customgray{
+  background-color: #E9E9E9;
+}
+
 .signin{
     
   background-color: #E9E9E9;
@@ -798,6 +806,11 @@ video {
   font-weight: 700;
 }
 
+input[type=text]{
+    padding: 12px 20px;
+}
+
+
 .fz-16{
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
@@ -828,4 +841,8 @@ video {
   font-size: 16px;
   font-family: 'Poppins';
   border-radius: 10px;
+}
+
+.cartcontainer{
+  width: 80%;
 }
