--- a/public/style.css
+++ b/public/style.css
@@ -22,29 +22,20 @@
 .signin{
     
   background-color: #E9E9E9;
-  width: 100%;
-  height: 40vw;
-  align-items: center;
-  align-content: center;
+  height: 50vw;
+
+
 }
-.signinbox{
+.loginbox{
   background-color: white;
   border: 1px solid;
   border-radius: 30px;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  height:80%;
-  width:40%;
-  top: 50%;
-  left: 50%;
-  position: relative;
-  transform: translate(-50%,-50%);
+  width:50%;
+  height:70%;
   box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.195);
 }
-.signincontent{
-  padding: 5px;
-}
+
+
 
 .login{
   font-size: 40px;
@@ -54,77 +45,10 @@
 
 .inputbox{
   background-color: #D9D9D9;
-  height: 75px;
-  width:470px;
+  height: 30%;
+  width:40%;
   border-radius: 10px;
   margin-bottom: 20px;
-}
-.rememberme{
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 16px;
-  font-family: "Poppins", san;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Hide the browser's default checkbox */
-.rememberme input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-}
-
-/* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-}
-
-/* On mouse-over, add a grey background color */
-.rememberme:hover input ~ .checkmark {
-  background-color: #ccc;
-}
-
-/* When the checkbox is checked, add a blue background */
-.rememberme input:checked ~ .checkmark {
-  background-color: #2196F3;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the checkmark when checked */
-.rememberme input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-.checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
 }
 
 .forget-orange{
