--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
+html,body{
+  min-height: 100%;
+  background-color: #89B6E3;
+}
+
 
 .bg-customblue{
   background-color: #89B6E3;
@@ -200,9 +205,7 @@ input[type=text]{
   background-color: white;
   border: 1px solid;
   border-radius: 30px;
-  width:30%;
-  height:70%;
-  min-width: 5vw;
+  height: fit-content;
   box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.195);
 }
 
