--- a/public/style.css
+++ b/public/style.css
@@ -212,3 +212,10 @@ input[type=text]{
   box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.195);
 }
 
+
+.adminbox{
+  background-color: white;
+  border: 1px solid;
+  border-radius: 30px;
+  box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.195);
+}
