--- a/public/style.css
+++ b/public/style.css
@@ -431,6 +431,7 @@ input[type="submit"], input[type="button"] {
 
 #form .categorySearchSelect{
   width: 420px;
+  height: 25px;
   border-bottom: #CCC 1px solid;
   margin: 10px 0 0 10px;
 }
