--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,11 @@ html,body{
   background-color: #D9D9D9;
 }
 
+.bg-customlightgray{
+  background-color: #F4F4F4;
+  border-radius: 10px;
+}
+
 /* signin page */
 .signin{
     
@@ -81,6 +86,7 @@ html,body{
   font-size: 24px;
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
+  color: black;
 }
 .fz-48{
   font-size:48px;
@@ -96,6 +102,7 @@ input[type=text]{
   font-size: 16px;
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
+  color: black;
 }
 
 .line{
@@ -473,4 +480,8 @@ input[type="checkbox" i] {
 
 #contactBox{
   padding-right: 20px;
+}
+
+.graytext{
+  color:gray;
 }
